# Decision-Graph-AI-Kodoku-

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260515_0149_7345c97c19d2_001_initial.py  20260622_0345_89a17aa10606_app_settings.py  20260624_0000_session_cost_usd.py  20260624_0100_node_model.py
backend/kodoku/: __init__.py  cli.py  main.py  settings.py  web.py
backend/kodoku/api/: dtos.py  events.py  health.py  run.py  sessions.py  settings.py
backend/kodoku/db/: base.py  bootstrap.py  engine.py  models.py  session.py
backend/kodoku/domain/: enums.py
backend/kodoku/engine/: __init__.py  events.py  frontier.py  runner.py  state_machine.py
backend/kodoku/engine/prompts/: __init__.py  (+4 more)
backend/kodoku/export/: memo.py
backend/kodoku/llm/: __init__.py  base.py  factory.py  fake.py  litellm_client.py
backend/kodoku/repo/: events.py  sessions.py  settings.py
backend/kodoku/ws/: emit.py  manager.py  router.py
backend/tests/: conftest.py  test_bootstrap.py  test_cli.py  test_db_engine.py  test_dtos.py  test_engine.py  test_enums.py  test_events_api.py  test_export_memo.py  test_factory.py  test_frontier.py  test_health.py  test_judge.py  test_llm.py  test_llm_cost.py  test_models.py  test_repo_sessions.py  test_repo_settings.py  test_run_api.py  test_sessions_api.py  test_settings.py  test_settings_api.py  test_steps_decide_synthesize.py  test_steps_expand_evaluate.py  test_web_serving.py
(+60 files in other folders)
